--- a/.github/actions/get-tag-docker-action/action.yml
+++ b/.github/actions/get-tag-docker-action/action.yml
@@ -22,4 +22,4 @@ runs:
     - name: formating image name
       id: retag
       shell: bash
-      run: echo "full_image_name=${{ inputs.image_name }}:${{ inputs.version }}" >> $GITHUB_OUTPUT
+      run: echo "full_image_name=spatrocinio/${{ inputs.image_name }}:${{ inputs.version }}" >> $GITHUB_OUTPUT
