--- a/.github/workflows/get-formated-tag.yml
+++ b/.github/workflows/get-formated-tag.yml
@@ -10,7 +10,7 @@ jobs:
   get_tag_docker:
     runs-on: [self-hosted, labs-runner]
     outputs:
-      full_docker_tag: ${{ steps.tagger.outputs.full_docker_tag }}
+      full_docker_tag: ${{ steps.tagger.outputs.full_image_name }}
 
     steps:
       - name: Checkout repository
@@ -28,7 +28,3 @@ jobs:
         with:
           image_name: ${{ steps.get_data.outputs.APP_NAME }}
           version: ${{ steps.get_data.outputs.VERSION }}
-
-      # - name: Set output with full image name
-      #   id: set_output
-      #   run: echo "full_docker_tag=${{ steps.tagger.outputs.full_image_name }}" >> $GITHUB_OUTPUT
