--- a/.github/workflows/get-formated-tag.yml
+++ b/.github/workflows/get-formated-tag.yml
@@ -1,6 +1,11 @@
 name: Get package full tag to docker build
 on: 
   workflow_call:
+    secrets:
+      DOCKER_USERNAME:
+        description: 'The name of the docker username. Must include the final /'
+        required: false
+
     outputs:
       full_tag:
         description: 'Full tag to use on a docker build'
@@ -21,10 +26,21 @@ jobs:
         run: |
           echo "VERSION=$(sed -n 's/.*"version": *"\([^"]*\)".*/\1/p' package.json)" >> $GITHUB_OUTPUT
           echo "APP_NAME=$(sed -n 's/.*"name": *"\([^"]*\)".*/\1/p' package.json)" >> $GITHUB_OUTPUT
+        shell: bash
+
+      - name: Set pre app name
+        run: |
+          if [ -n "${{ secrets.DOCKER_USERNAME }}" ]; then
+            pre_app="${{ secrets.DOCKER_USERNAME }}"
+            [[ "$pre_app" != */ ]] && pre_app="${pre_app}/"
+            echo "PRE_APP_NAME=$pre_app" >> $GITHUB_ENV
+          else
+            echo "PRE_APP_NAME=" >> $GITHUB_ENV
+          fi
 
       - name: Get full image name
         uses: ./.github/actions/get-tag-docker-action
         id: tagger
         with:
-          image_name: ${{ steps.get_data.outputs.APP_NAME }}
+          image_name: "${{ env.PRE_APP_NAME }}${{ steps.get_data.outputs.APP_NAME }}"
           version: ${{ steps.get_data.outputs.VERSION }}
