--- a/.github/actions/get-tag-docker-action/action.yml
+++ b/.github/actions/get-tag-docker-action/action.yml
@@ -4,7 +4,7 @@ description: 'Will create a full name of the docker image with the new tag'
 inputs:
   image_name:
     required: true
-    description: 'The name of the docker image'
+    description: 'The name of the docker image. This should include the registry and repository if needed'
   
   version:
     required: true
@@ -23,5 +23,4 @@ runs:
       id: retag
       shell: bash
       run: |
-        echo "full_image_name=spatrocinio/${{ inputs.image_name }}:${{ inputs.version }}" >> $GITHUB_OUTPUT
-        echo "Full image name: spatrocinio/${{ inputs.image_name }}:${{ inputs.version }}"
+        echo "full_image_name=${{ inputs.image_name }}:${{ inputs.version }}" >> $GITHUB_OUTPUT
