--- a/.github/actions/get-tag-docker-action/action.yml
+++ b/.github/actions/get-tag-docker-action/action.yml
@@ -13,6 +13,7 @@ inputs:
 outputs:
   full_image_name:
     description: 'The full name of the docker image with the new tag'
+    value: ${{ steps.retag.outputs.full_image_name }}
 
 
 runs:
