--- a/.github/workflows/cd-pull-deploy.yml
+++ b/.github/workflows/cd-pull-deploy.yml
@@ -2,13 +2,13 @@ on:
   workflow_run:
     workflows: ["Build and Push Docker Image"]
     types: [completed]
-    branches: [main, development]
+    branches: ['**']
 
 
 jobs:
   build:
     runs-on: [self-hosted, virtualbox]
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
       - name: Get version from package.json
