--- a/.github/workflows/cd-pull-deploy.yml
+++ b/.github/workflows/cd-pull-deploy.yml
@@ -2,7 +2,7 @@ on:
   workflow_run:
     workflows: ["Build and Push Docker Image"]
     types: [completed]
-    branches: ['**']
+    # branches: ['**']
 
 
 jobs:
