Added branches to CI and CD

--- a/.github/workflows/ci-build-push.yml
+++ b/.github/workflows/ci-build-push.yml
@@ -1,5 +1,8 @@
 name: Build and Push Docker Image
-on: [push,workflow_dispatch]
+on: 
+  push:
+    branches: [main, development]
+  workflow_dispatch:
 
 jobs:
   get_version:
