Using test if necesary

--- a/.github/workflows/ci-build-push.yml
+++ b/.github/workflows/ci-build-push.yml
@@ -59,3 +59,9 @@ jobs:
           echo "Logging out from Docker registry"
           docker logout
         shell: bash
+
+
+  run_tests:
+    uses: ./.github/workflows/run-tests.yml
+    needs: build
+    if: ${{ needs.build.result == 'success' && github.ref == 'refs/heads/development' }}
