APP_NAME is read from the package.json

--- a/.github/workflows/get-formated-tag.yml
+++ b/.github/workflows/get-formated-tag.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Get version and name from package.json
         id: get_data
         run: |
-          echo "APP_NAME=${{ vars.DOCKER_REPO }}" >> $GITHUB_OUTPUT
+          echo "APP_NAME=$(sed -n 's/.*"name": *"\([^"]*\)".*/\1/p' package.json)" >> $GITHUB_OUTPUT
           if [ "${{ github.base_ref }}" == 'main' ]; then
             echo "VERSION=$(sed -n 's/.*"version": *"\([^"]*\)".*/\1/p' package.json)-RC" >> $GITHUB_OUTPUT
           else
