--- a/.github/workflows/get-formated-tag.yml
+++ b/.github/workflows/get-formated-tag.yml
@@ -29,7 +29,7 @@ jobs:
           if [ "${{ github.base_ref }}" == 'main' ]; then
             echo "VERSION=$(sed -n 's/.*"version": *"\([^"]*\)".*/\1/p' package.json)-RC" >> $GITHUB_OUTPUT
           else
-            "VERSION=$(sed -n 's/.*"version": *"\([^"]*\)".*/\1/p' package.json)-SNAPSHOT" >> $GITHUB_OUTPUT
+            echo "VERSION=$(sed -n 's/.*"version": *"\([^"]*\)".*/\1/p' package.json)-SNAPSHOT" >> $GITHUB_OUTPUT
           fi
         shell: bash
 
