--- a/.github/workflows/cd-pull-deploy.yml
+++ b/.github/workflows/cd-pull-deploy.yml
@@ -56,6 +56,7 @@ jobs:
               sleep 5
             fi
           done
+          echo ''
           echo "NGINX DID NOT START"
         shell: bash
 
